--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <script async defer src="https://api.mapbox.com/mapbox-assembly/v0.24.0/assembly.js"></script>
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.1/mapbox-gl.js'></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://npmcdn.com/@turf/turf/turf.min.js"></script>
+
 <script>
     // access token
     mapboxgl.accessToken = 'pk.eyJ1IjoiZWlsZWVuZ3JhZHkiLCJhIjoiY2pvNG00eXVjMDFlcjNxcW1yZ3I2OTJ2ZSJ9.l2EtBykdOJSCNiszd2NbaA';
@@ -45,10 +47,9 @@
     var map = new mapboxgl.Map({
         container: 'map', // container id
         style: 'mapbox://styles/mapbox/dark-v9', // stylesheet location
-        center: [2.28, 11.77], // starting position [lng, lat]
-        zoom: 1.2 // starting zoom
+        center: [-99.00419461981159, 39.09686673109556], // starting position [lng, lat]
+        zoom: 3.52 // starting zoom
     });
-
      
     var years = [
         '2010',
@@ -78,22 +79,26 @@
         5: "F5: 261–318 mph winds, incredible damage"
     }
 
+    var hoveredPathId = null;
+
     map.on('load', function() {
         d3.json('data/tornadoes-1-5.json').then(geojson => {
-            console.log(geojson);
             addLayer(geojson);
             addLegend(geojson);
         });
     });
 
     function addLayer(geojson) {
+        map.addSource('tornados', {
+            'type': 'geojson',
+            'data': geojson,
+            'generateId': true
+        });
+
         map.addLayer({
             'id': 'tornado-paths',
             'type': 'line',
-            'source': {
-                'type': 'geojson',
-                'data': geojson // use the data as the data source
-            },
+            'source': 'tornados', // set data source defined above
             'paint': {
                 "line-color": [
                     "match",
@@ -105,12 +110,49 @@
                     5, colorCodes[5],
                     "#000000"
                 ],
-                "line-opacity": 1,
-                "line-width": 2
+                "line-opacity": [
+                    "case",
+                    ["boolean", ["feature-state", "hover"], false],
+                    1,
+                    0.75
+                ],
+                "line-width": [
+                    "case",
+                    ["boolean", ["feature-state", "hover"], false],
+                    5,
+                    3
+                ]
             },
             'layout': {
                 "line-cap": "round"
             }
+        });
+
+        map.on('mousemove', 'tornado-paths', function(e) {
+            console.log(e.features[0]);
+            if (e.features.length > 0) {
+                if (hoveredPathId) {
+                    map.setFeatureState(
+                    { source: 'tornados', id: hoveredPathId },
+                    { hover: false }
+                    );
+                }
+                hoveredPathId = e.features[0].id;
+                map.setFeatureState(
+                    { source: 'tornados', id: hoveredPathId },
+                    { hover: true }
+                );
+            }
+        });
+
+        map.on('mouseleave', 'tornado-paths', function() {
+            if (hoveredPathId) {
+                map.setFeatureState(
+                    { source: 'tornados', id: hoveredPathId },
+                    { hover: false }
+                );
+            }
+            hoveredPathId = null;
         });
 
         // set intial filter to 2010
@@ -140,6 +182,38 @@
         }
         d3.select("#legend ul").html(listItems);
     }
+
+    var coordinates;
+    var startPoint;
+    var endPoint;
+    var brng;
+    var midpoint;
+
+    map.on('click', 'tornado-paths', function(e) {
+        coordinates = [e.features[0].properties.slon, e.features[0].properties.slat];
+
+        startPoint = turf.point([e.features[0].properties.slon, e.features[0].properties.slat]);
+        endPoint = turf.point([e.features[0].properties.elon, e.features[0].properties.elat]);
+        console.log(startPoint)
+
+        brng = turf.bearing(startPoint, endPoint);
+
+        var line = turf.lineString(e.features[0].geometry.coordinates)
+        var bbox = turf.bbox(line);
+        console.log(bbox);
+
+        map.fitBounds(bbox, {
+            padding: 40
+        });
+
+        map.flyTo({
+            center: coordinates,
+            zoom: 10,
+            pitch: 30,
+            bearing: brng
+        })
+
+    })
 
 </script>
 
